--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>title</title>
-  </head>
-  <body>
-    <h1>Pig Latinizer</h1>
-  
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>title</title>
+</head>
+
+<body>
+  <h1>Pig Latinizer!</h1>
+  <form action="/piglatinize" method="POST">
+    <p>Enter your phrase: <input type="text" name="user_phrase" id="user_phrase"></p>
+  </form>
+</body>
+
 </html>
