--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+    <form class="" action="/results" method="post">
+    <p>Welcome to Pig Latinizer!</p>
+    <p>Enter your phrase:</p>
+    <input type="text" name="user_phrase">
+    <input type="submit" id="Submit">
+    </form>
+
   </body>
 </html>
