--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+    <form method="POST" action="/piglatinize">
+      <p>Enter Your Phrase: <input type="text" name="user_phrase"></p>
+      <input type="submit" id="Submit"/>
+    </form>
   </body>
 </html>
