--- a/views/oinkers.erb
+++ b/views/oinkers.erb
@@ -1,1 +1,1 @@
-<h1>Your sentence "<%= @translated.string %>" translated is: "<%= @translated.piggy %>"".</h1>
+<h1>Your sentence "<%= @phrase.string %>" translated is: "<%= @phrase_pig_latin  %>".</h1>
