--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Pig Latinizer!</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
+    <h1>Ayyyyyyyyeeeeeee</h1>
     <form method="POST" action="/piglatinize">
-      <p>Enter Your Phrase: <input type="text" name="user_phrase"></p>
+      <p>Enter your phrase: <input type="text" name="user_phrase"></p>
       <input type="submit" id="Submit"/>
     </form>
   </body>
