--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+
+    <form  action="/piglatinizer" method="post">
+      <h1>Pig Latinizer!</h1>
+      <label for="piglatin">Enter your phrase:</label>
+      <input id="piglatin" type="text" name="user_phrase">
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
